--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.0)
 project(TEST)
-set(SOURCE test.cpp)
+set(SOURCE t1.cpp)
 add_executable(${PROJECT_NAME} ${SOURCE})
